# slicer-cart

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  requirements_dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
CART/: CART.py  DataManager.py  VolumeOnlyDataIO.py  cart_base_classes_docs.md  configuration.json
CART/CARTLib/: Config.py  DataIOBase.py  DataManager.py  DataUnitBase.py  LayoutLogic.py  OrganLabellingDemo.py  TaskBaseClass.py  VolumeOnlyDataIO.py  default_config.json
CART/CARTLib/core/: CohortGenerator.py  DataManager.py  DataUnitBase.py  LayoutManagement.py  README.md  SetupWizard.py  TaskBaseClass.py
CART/CARTLib/examples/: MultiContrastSegmentationEvaluationDataUnit.py  MultiContrastSegmentationEvaluationTask.py  README.md  SegmentationEvaluationDataUnit.py  SegmentationEvaluationTask.py  __init__.py
CART/CARTLib/examples/GenericClassification/: GenericClassificationGUI.py  GenericClassificationOutputManager.py  GenericClassificationTask.py  GenericClassificationUnit.py  README.md
CART/CARTLib/examples/Markup/: Markup.py  MarkupConfig.py  MarkupIO.py  MarkupTask.py  MarkupUnit.py  README.md
CART/CARTLib/examples/MultiContrastSegmentation/: MultiContrastOutputManager.py  MultiContrastSegmentationConfig.py  MultiContrastSegmentationEvaluationDataUnit.py  (+3 more)
CART/CARTLib/utils/: README.md  __init__.py  bids.py  cohort.py  config.py  data.py  data_checker.py  default_config.json  formatting.py  layout.py  task.py  widgets.py
Legacy/: LayoutLogic.py  README.md
(+27 files in other folders)
